--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
-// For those who want the bleeding edge
+import com.replaymod.gradle.preprocess.PreprocessTask
+
 buildscript {
     ext.kotlin_version = "1.3.72"
     ext.dokka_version = "0.10.0"
@@ -95,6 +96,14 @@ preprocess {
     vars.put("MC", mcVersion)
     vars.put("FABRIC", project.fabric ? 1 : 0)
     vars.put("FORGE", project.fabric ? 0 : 1)
+
+    keywords.set([
+        ".java": PreprocessTask.DEFAULT_KEYWORDS,
+        ".kt": PreprocessTask.DEFAULT_KEYWORDS,
+        ".js": PreprocessTask.DEFAULT_KEYWORDS,
+        ".json": PreprocessTask.DEFAULT_KEYWORDS,
+        ".info": PreprocessTask.DEFAULT_KEYWORDS,
+    ])
 }
 
 version = "1.3.0-" + (
